# loto

./: .env  .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  Dockerfile.api  Dockerfile.ui  LICENSE  Makefile  README.md  __init__.py  cli.py  docker-compose.yml  eslint.config.cjs  graph_builder.py  integrations.py  isolation_planner.py  package.json  pnpm-lock.yaml  prod.env  pyproject.toml  renderer.py  requirements.in  requirements.txt  rule_engine.py  sim_engine.py
config/: hats.json  hats_permit_map.yaml  hats_policy.yaml  hswa_rules_v1.1.yaml  inventory_item_units.yaml  inventory_units.yaml
demo/: assets.yaml  controls.yaml  drains.csv  hazards.yaml  line_list.csv  redundancy_map.yaml  rules.yaml  sources.csv  unit_map.yaml  valves.csv  work_orders.csv
docs/: API_SCHEDULING_RUNBOOK.md  COMPLIANCE.md  DEPLOYMENT.md  HATS_RANKING.md  INTERNAL_REVIEW_CHECKLIST.md  JP_PERMIT_GATE.md  LOTO_A.json  PILOT_RUNBOOK.md  SAFETY_GATES.md  SAVED_QUERIES.md  SECURITY.md  SELECTOR_CONVENTIONS.md  TRIAGE_RANKING.md  config.md  demo_signoff.md  network.md  on_call.md
kielproc/: __init__.py  run_easy.py
loto/: __init__.py  bundling.py  cli.py  config.py  constants.py  errors.py  graph_builder.py  graph_models.py  impact.py  impact_config.py  integrations.py  inventory.py  isolation_planner.py  loggers.py  logging_setup.py  logic_table.py  models.py  normalization.py  permits.py  renderer.py  rule_engine.py  sim_engine.py  triage_score.py  work_scope.py
scripts/: check-prereqs.sh  export_pptx_slides_to_png.py  hats_backfill.py  restrict-egress.sh  seed_demo.py  triage_backfill.py
tests/: conftest.py  job_utils.py  test_admin_normalize.py  test_bundling.py  test_cli_demo.py  test_cli_golden.py  test_config.py  test_env_validation.py  test_errors.py  test_graph_builder.py  test_impact_config.py  test_impact_engine.py  test_import.py  test_integration_adapter_selection.py  test_integrations_adapters.py  test_inventory.py  test_inventory_tasks.py  test_logging.py  test_models.py  test_objective.py  test_overlay.py  test_overlay_golden.golden.json  test_overlay_golden.py  test_permit_adapter_selection.py  (+13 more)
(+281 files in other folders)
